--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Parot Card Game</h1>
+    <h1>Parot Game</h1>
     <div class="container">    
     <div class="fila1" id="bloco">
         <img src="imagen/2e072ef8d57d22b4ef4206f38546e2ed.jpg" id="op1" class="img_pri4">
