--- a/projeto/index.html
+++ b/projeto/index.html
@@ -21,6 +21,7 @@
                 <img src="imagens_projeto/back.png" id="op4" class="img_pri">
                 <img src="imagens_projeto/back.png" id="op5" class="img_pri6">
                 <img src="imagens_projeto/back.png" id="op6" class="img_pri3">
+                <img src="imagens_projeto/back.png" id="opt14" class="img_pri7">
             </div>
         </div>
         <div class="fila2">
@@ -31,6 +32,7 @@
                 <img src="imagens_projeto/back.png" id="op10" class="img_pri">
                 <img src="imagens_projeto/back.png" id="op11" class="img_pri5">
                 <img src="imagens_projeto/back.png" id="op12" class="img_pri2">
+                <img src="imagens_projeto/back.png" id="op13" class="img_pri7">
             </div>
         </div>
     </div>
